--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
+appdirs==1.4.4
 asgiref==3.3.1
 Django==3.1.7
+django-request==1.5.6
 gunicorn==20.0.4
+importlib==1.0.4
+packaging==20.9
+psycopg2==2.8.6
+pyparsing==2.4.7
+python-dateutil==2.8.1
 pytz==2021.1
+six==1.15.0
 sqlparse==0.4.1
